@@ -1,12 +1,12 @@
 <pkgref spec="1.12" uuid="9ECFB3D2-9E23-4F80-8F98-D0DD1897F1C8">
 <config>
 	<identifier>com.google.code.p.libbde.site-packages.pkg</identifier>
-	<version>20140404</version>
+	<version>20140405</version>
 	<description/>
 	<post-install type="none"/>
 	<requireAuthorization/>
-	<installFrom>/home/lordyesta/Projects/libbde/macosx/tmp/lib64/python2.7/site-packages</installFrom>
-	<installTo mod="true">/usr/lib64/python2.7/site-packages</installTo>
+	<installFrom>/home/lordyesta/Projects/libbde/macosx/tmp/</installFrom>
+	<installTo mod="true"></installTo>
 	<flags>
 		<followSymbolicLinks/>
 	</flags>
